Try to fix calender on ios safari again

--- a/frontend/src/pages/customer-service/CustomerService.css
+++ b/frontend/src/pages/customer-service/CustomerService.css
@@ -102,6 +102,7 @@
   
     .button-container {
       flex-direction: row;
+      margin-top: 1em;
     }
 
   }
